# t8-client

./: .gitignore  README.md  pyproject.toml
src/t8_client/: api.py  main.py
tests/: test_api.py
tests/data/: mock_spectra_data.json  mock_wave_data.json
